@@ -8,6 +8,8 @@ Release Notes
 trunk
 -----
 
+* Add support for S-Frames in tableio
+
 Dec. 20, 2019 Alex Olivas (aolivas@umd.edu)
 -------------------------------------------
 Combo Release V00-00-00
